# DoomOpenGL

./: .gitignore  CMakeLists.txt  README.md
libs/glad/glad/include/glad/: glad.h
libs/glad/glad/src/: glad.c
src/: Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  main.cpp
